--- a/fixture/default/core/Mage/CreditMemo/uimap/admin/CreditMemo.yml
+++ b/fixture/default/core/Mage/CreditMemo/uimap/admin/CreditMemo.yml
@@ -57,6 +57,10 @@ manage_sales_credit_memos:
                             filter_billing_name: //input[@name='shipping_name']
                             filter_refunded_from: //input[@name='grand_total[from]']
                             filter_refunded_to: //input[@name='grand_total[to]']
+        messages: &creditMemoMessages
+            confirmation_to_procced: This will create an offline refund. To create an online refund, open an invoice and create credit memo for it. Do you wish to proceed?
+            success_creating_creditmemo: //li[normalize-space(@class)='success-msg' and contains(.,'The credit memo has been created.')]
+            failed_authorize_online_refund: "//li[normalize-space(@class)='error-msg' and contains(.,'Gateway error: The referenced transaction does not meet the criteria for issuing a credit. If the invoice was created offline, try creating an offline creditmemo.')]"
 
 
 create_credit_memo:
@@ -124,10 +128,7 @@ create_credit_memo:
         buttons:
             back: //p[@class='form-buttons']//button[span='Back']
             reset: //p[@class='form-buttons']//button[span='Reset']
-        messages:
-            confirmation_to_procced: This will create an offline refund. To create an online refund, open an invoice and create credit memo for it. Do you wish to proceed?
-            success_creating_creditmemo: //li[normalize-space(@class)='success-msg' and contains(.,'The credit memo has been created.')]
-            failed_authorize_online_refund: "//li[normalize-space(@class)='error-msg' and contains(.,'Gateway error: The referenced transaction does not meet the criteria for issuing a credit. If the invoice was created offline, try creating an offline creditmemo.')]"
+        messages: *creditMemoMessages
 
 create_credit_memo_for_invoice:
     mca: sales_order_creditmemo/new/order_id/%id%/invoice_id/%invoice_id%/
@@ -180,3 +181,4 @@ view_credit_memo:
             back: //p[@class='form-buttons']//button[span='Back']
             send_email: //p[@class='form-buttons']//button[span='Send Email']
             print: //p[@class='form-buttons']//button[span='Print']
+        messages: *creditMemoMessages
