--- a/fixture/default/core/Mage/Customer/uimap/frontend/Customer.yml
+++ b/fixture/default/core/Mage/Customer/uimap/frontend/Customer.yml
@@ -54,7 +54,7 @@ register_account:
                         pageelements:
                             captcha: //img[@alt='CAPTCHA']
                         required: [first_name, last_name, email, password, password_confirmation]
-        messages:
+        messages: &customerMessages
             not_valid_length_first_name: //li[normalize-space(@class)='error-msg' and contains(.,'"First Name" length must be equal or less than 255 characters.')]
             not_valid_length_last_name: //li[normalize-space(@class)='error-msg' and contains(.,'"Last Name" length must be equal or less than 255 characters.')]
             not_valid_length_email: //li[normalize-space(@class)='error-msg' and contains(.,'"Email" exceeds the allowed length.')]
@@ -63,6 +63,7 @@ register_account:
             passwords_not_match: //div[@id='advice-validate-cpassword-confirmation']
             short_passwords: //div[@id='advice-validate-password-password']
             email_exists: //li[span='There is already an account with this email address. If you are sure that it is your email address, click here to get your password and access your account.']
+            invalid_login_or_password: //li[normalize-space(@class)='error-msg' and contains(.,'Invalid login or password.')]
 
 # 'Login or Create an Account' page
 customer_login:
@@ -86,10 +87,7 @@ customer_login:
                         fields:
                             email: //input[@id='email']
                             password: //input[@id='pass']
-        messages:
-            empty_required_field: %fieldXpath%/following-sibling::*[text()='This is a required field.']
-            invalid_mail: //div[@id='advice-validate-email-email']
-            invalid_login_or_password: //li[normalize-space(@class)='error-msg' and contains(.,'Invalid login or password.')]
+        messages: *customerMessages
 
 edit_account_info:
     mca: customer/account/edit/
@@ -111,5 +109,4 @@ edit_account_info:
                             current_password: //input[@id='current_password']
                             new_password: //input[@id='password']
                             confirm_new_password: //input[@id='confirmation']
-        messages:
-            empty_required_field: %fieldXpath%/following-sibling::*[text()='This is a required field.']
+        messages: *customerMessages
