--- a/fixture/default/core/Mage/Wishlist/uimap/frontend/Wishlist.yml
+++ b/fixture/default/core/Mage/Wishlist/uimap/frontend/Wishlist.yml
@@ -80,6 +80,11 @@ my_wishlist:
             invalid_emails: //li[@class='error-msg' and contains(.,'Please input a valid email address.')]
             invalid_emails_js: //div[@class='validation-advice' and @id='advice-validate-emails-email_address' and contains(.,'Please enter a valid email addresses, separated by commas. For example johndoe@domain.com, johnsmith@domain.com.')]
             required_emails: //div[@class='validation-advice' and @id='advice-required-entry-email_address' and text()='This is a required field.']
+            specify_product_config_option: //li[normalize-space(@class)='notice-msg' and contains(.,"Please specify the product's option(s).")]
+            specify_product_link: //li[normalize-space(@class)='notice-msg' and contains(.,"Please specify product link(s).")]
+            specify_product_option: //li[normalize-space(@class)='notice-msg' and contains(.,"Please select options for product.")]
+            specify_product_quantity: //li[normalize-space(@class)='notice-msg' and contains(.,"Please specify the quantity of product(s).")]
+            specify_product_required_option: //li[normalize-space(@class)='notice-msg' and contains(.,"Please specify the product's required option(s).")]
         links:
             back: //p[@class='back-link']/a[contains(.,'Back')]
 
@@ -160,12 +165,7 @@ wishlist_configure_product:
                             custom_option_file_ext: /following-sibling::dd[1]//p[contains(text(),'Allowed file extensions to upload') and ./strong='%fileExt%']
                             custom_option_file_max_width: /following-sibling::dd[1]//p[contains(text(),'Maximum image width') and ./strong='%fileWidth% px.']
                             custom_option_file_max_height: /following-sibling::dd[1]//p[contains(text(),'Maximum image height') and ./strong='%fileHeight% px.']
-        messages:
-            specify_product_config_option: //li[normalize-space(@class)='notice-msg' and contains(.,"Please specify the product's option(s).")]
-            specify_product_link: //li[normalize-space(@class)='notice-msg' and contains(.,"Please specify product link(s).")]
-            specify_product_option: //li[normalize-space(@class)='notice-msg' and contains(.,"Please select options for product.")]
-            specify_product_quantity: //li[normalize-space(@class)='notice-msg' and contains(.,"Please specify the quantity of product(s).")]
-            specify_product_required_option: //li[normalize-space(@class)='notice-msg' and contains(.,"Please specify the product's required option(s).")]
+        messages: *wishlistMessages
 
 share_wishlist:
     mca: wishlist/index/share/
@@ -184,7 +184,6 @@ share_wishlist:
                         links:
                             back: //p[@class='back-link']/a[contains(.,'Back')]
         messages: *wishlistMessages
-
 
 share_wishlist_index:
     mca: wishlist/index/share/index/
