--- a/fixture/default/core/Mage/_uimapIncludes/admin.yml
+++ b/fixture/default/core/Mage/_uimapIncludes/admin.yml
@@ -53,7 +53,7 @@ admin_header:
                         pageelements:
                             qtyElementsInTable: //td[@class='pager']//span[contains(@id,'total-count')]
                             fieldNameWithValidationMessage: "/ancestor::*[1]/preceding-sibling::*[1]/descendant-or-self::*[string-length(text())>1]"
-                            loadingHolder: "//div[@id='loading-mask' and not(contains(@style,'display: none'))]"
+                            loadingHolder: "//div[@id='loading-mask'][not(contains(@style,'display:') and contains(@style,'none'))]"
         messages:
             general_notice: "//*/descendant::*[normalize-space(@class)='notice-msg'][string-length(.)>1]"
             general_success: "//*/descendant::*[normalize-space(@class)='success-msg'][string-length(.)>1]"
